fix layout on mobile for all pages

--- a/scss/_black.scss
+++ b/scss/_black.scss
@@ -291,7 +291,7 @@
 @media screen and (max-width: 400px) {
   .black-area {
     width: 100%;
-    height: 400px;
+    height: 800px;
     padding: 0 20px;
 
     .cross .logo {
@@ -299,7 +299,11 @@
     }
   }
 
-  .title {
+  .thanks-black-area {
+    height: 400px;
+  }
+
+  .title-thanks {
     display: none;
   }
 
