--- a/scss/_white.scss
+++ b/scss/_white.scss
@@ -272,18 +272,21 @@
 
 @media screen and (max-width: 400px) {
   .white-area {
-    max-height: 405px;
+    height: 100%;
     width: 100%;
     padding: 21px 20px 0;
   }
 
   .thanks-white-area {
     height: 100vh;
+    height: 405px;
     display: flex;
     flex-direction: column;
     // justify-content: space-around;
   }
-
+  .error {
+    font-size: 10px;
+  }
   .cross {
     position: absolute;
     top: 21px;
